# django-drf-cookiecutter-template

./: LICENSE  README.md  cookiecutter.json
.github/: dependabot.yml
.github/workflows/: test_create_project.yml
hooks/: post_gen_project.sh  pre_gen_project.sh
{{cookiecutter.project_slug}}/: .editorconfig  .env_1  .flake8  Dockerfile  Makefile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/src/: manage.py
{{cookiecutter.project_slug}}/src/scripts/: prestart.sh
{{cookiecutter.project_slug}}/src/users/: urls.py
{{cookiecutter.project_slug}}/src/users/migrations/: 0001_initial.py
{{cookiecutter.project_slug}}/src/users/models/: __init__.py  user.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.django_settings_package}}/: asgi.py  settings.py  urls.py  wsgi.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.django_settings_package}}/urls/: __init__.py  v1.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_conf_app}}/: asgi.py  settings.py  types.py  urls.py  wsgi.py
